--- a/style.css
+++ b/style.css
@@ -29,7 +29,12 @@ max-height:100%;
   background: #ccc;
   height: 200px;
   margin: 20px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-content: center
 }
+
 
 .button-layout {
   display: flex;
@@ -55,19 +60,19 @@ max-height:100%;
 
 /*Hold button config */
 .hold-button {
-   display:inline-block;
-   padding:0.3em 1.2em;
-   margin:0 0.1em 0.1em 0;
-   border:0.16em solid rgba(224, 204, 24, 0.863);
-   border-radius:2em;
-   box-sizing: border-box;
-   text-decoration:none;
-   font-family:sans-serif;
-   font-weight:300;
-   color:#c9d133;
-   text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
-   text-align:center;
-   transition: all 0.2s;
+  display:inline-block;
+  padding:0.3em 1.2em;
+  margin:0 0.1em 0.1em 0;
+  border:0.16em solid rgba(224, 204, 24, 0.863);
+  border-radius:2em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-family:sans-serif;
+  font-weight:300;
+  color:#c9d133;
+  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+  text-align:center;
+  transition: all 0.2s;
 }
 
 .hold-button:hover{
@@ -75,9 +80,9 @@ max-height:100%;
 }
 
 @media all and (max-width:30em){
-   hold-button{
-    display: block;
-    margin: 0.2em auto;
+  hold-button{
+  display: block;
+  margin: 0.2em auto;
   }
 
 /*Hold button config end */
@@ -98,13 +103,7 @@ max-height:100%;
   color: red;
 }
 
-.playerContainer {
-  width: 200px;
-  padding: 20px;
-  border: 5px solid white;
-  margin: 0;
-  font-size: 20px;
-
-  display: inline-block;
-  vertical-align: middle;
+.displayBox {
+  padding: 1px;
+  border: 1px solid black;
 }
